Updated titles of pages

--- a/templates/report.html
+++ b/templates/report.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %} Home {% endblock %}
+{% block title %} CikguHub - Report {% endblock %}
 
 {% block content %}
 
