--- a/templates/base.html
+++ b/templates/base.html
@@ -31,6 +31,8 @@
 
         <div class="collapse navbar-collapse" id="navbarsExampleDefault">
             <ul class="navbar-nav mr-auto">
+                {% if user.is_authenticated %}
+
                 <li class="nav-item active">
                     <a class="nav-link" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
                 </li>
@@ -40,15 +42,20 @@
                 <li class="nav-item">
                   <a class="nav-link" href="{% url 'report:index' %}">Report Generation</a>
                 </li>
-                {% comment %} <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true"
-                        aria-expanded="false">Dropdown</a>
-                    <div class="dropdown-menu" aria-labelledby="dropdown01">
-                        <a class="dropdown-item" href="#">Action</a>
-                        <a class="dropdown-item" href="#">Another action</a>
-                        <a class="dropdown-item" href="#">Something else here</a>
-                    </div>
-                </li> {% endcomment %}
+                <li class="nav-item">
+                  <a class="nav-link" href="{% url 'main:logout' %}">Logout</a>
+                </li>
+          
+                {% else %}
+          
+                <li class="nav-item">
+                  <a class="nav-link" href="{% url 'main:login' %}">Login</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="{% url 'main:register' %}">Register</a>
+                </li>
+          
+                {% endif %}
             </ul>
             <form class="form-inline my-2 my-lg-0">
                 <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
