--- a/templates/recs.html
+++ b/templates/recs.html
@@ -10,6 +10,11 @@
     <div class="jumbotron">
         <div class="container">
             <h1 class="display-3">Recommendation System</h1>
+            <br>
+            <div class="embed-responsive embed-responsive-16by9">
+                <iframe class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/is5MVZeiju8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            </div>
+            <br>
             <p>TBD</p>
         </div>
     </div>
