--- a/templates/recs_expert.html
+++ b/templates/recs_expert.html
@@ -9,7 +9,7 @@
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
         <div class="container">
-            <h1 class="display-3">Recommended Activity</h1>
+            <h1 class="display-3">Recommendation System</h1>
             <br>
             <div class="embed-responsive embed-responsive-16by9">
                 <iframe class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/is5MVZeiju8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
