Slight model fixes upon adding data

--- a/templates/recs.html
+++ b/templates/recs.html
@@ -14,10 +14,13 @@
             <div class="embed-responsive embed-responsive-16by9">
                 <iframe class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/is5MVZeiju8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
-            <br>
-            <p>TBD</p>
         </div>
     </div>
+    
+    <div class="container">
+        <p>TBD</p>
+    </div>
+
 
 <footer class="container">
     <p>&copy; CikguHub 2023</p>
