--- a/templates/base.html
+++ b/templates/base.html
@@ -43,8 +43,8 @@
                         Recommendation System
                     </a>
                     <div class="dropdown-menu" aria-labelledby="recsysMenu">
-                        <a class="dropdown-item" href="{% url 'recsys:index' %}">User</a>
-                        <a class="dropdown-item" href="{% url 'recsys:index' %}">Expert</a>
+                        <a class="dropdown-item" href="{% url 'recsys:user_recs' %}">User</a>
+                        <a class="dropdown-item" href="{% url 'recsys:expert_recs' %}">Expert</a>
                     </div>
                 </li>
                 <li class="nav-item dropdown">
@@ -52,8 +52,8 @@
                         Report Generation
                     </a>
                     <div class="dropdown-menu" aria-labelledby="reportMenu">
-                        <a class="dropdown-item" href="{% url 'report:index' %}">User</a>
-                        <a class="dropdown-item" href="{% url 'report:index' %}">Expert</a>
+                        <a class="dropdown-item" href="{% url 'report:user_report' %}">User</a>
+                        <a class="dropdown-item" href="{% url 'report:expert_report' %}">Expert</a>
                     </div>
                 </li>
                 {% else %}
