--- a/templates/report_expert.html
+++ b/templates/report_expert.html
@@ -9,7 +9,7 @@
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
         <div class="container">
-            <h1 class="display-3">Competency Report</h1>
+            <h1 class="display-3">Competency Report - Expert View</h1>
             <p>TBD</p>
         </div>
     </div>
