--- a/templates/recs.html
+++ b/templates/recs.html
@@ -11,14 +11,20 @@
         <div class="container">
             <h1 class="display-3">Recommended Activity</h1>
             <br>
+            {% if module %}
             <div class="embed-responsive embed-responsive-16by9">
-                <iframe class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/is5MVZeiju8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <iframe class="embed-responsive-item" width="560" height="315" src="{{ module.video.url }}" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
+            {% else %}
+            <p>No more activities left. More coming soon, thank you!</p>
+            {% endif %}
         </div>
     </div>
     
     <div class="container">
-        <p>TBD</p>
+        {% for q in module.questions.all %}
+        <p>Question: {{ q.question }}</p>
+        {% endfor %}
     </div>
 
 
