Added recommendation expert view

--- a/templates/base.html
+++ b/templates/base.html
@@ -44,7 +44,7 @@
                     </a>
                     <div class="dropdown-menu" aria-labelledby="recsysMenu">
                         <a class="dropdown-item" href="{% url 'recsys:user_recs' %}">User</a>
-                        <a class="dropdown-item" href="{% url 'recsys:expert_recs' %}">Expert</a>
+                        <a class="dropdown-item" href="{% url 'recsys:expert_recs' 0 %}">Expert</a>
                     </div>
                 </li>
                 <li class="nav-item dropdown">
