--- a/templates/report_expert.html
+++ b/templates/report_expert.html
@@ -6,15 +6,33 @@
 
 <main role="main">
 
-    <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
         <div class="container">
-            <h1 class="display-3">Competency Report - Expert View</h1>
-            <p>TBD</p>
+            <h1 class="display-3">Competency Report</h1>
+            <p></p>
+            <p>Name: {{ learner_model.full_name }}</p>
+            <p>School Level: {{ learner_model.school_level }}</p>
+            <p>Years of Experience: {{ learner_model.years_of_experience }}</p>
+            <p>Role: {{ learner_model.role }}</p>
+            <p>Skill Interests: {{ learner_model.skill_interests }}</p>
+            <p>Additional Interests: {{ learner_model.other_interests }}</p>
         </div>
     </div>
 
-<footer class="container">
-    <p>&copy; CikguHub 2023</p>
-</footer>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm col-md-6">
+                <h3>Competencies</h3>
+                <p>Planner: {{ planner_score }}</p>
+                <p>Guardian: {{ guardian_score }}</p>
+                <p>Mentor: {{ mentor_score }}</p>
+                <p>Motivator: {{ motivator_score }}</p>
+                <p>Assessor: {{ assessor_score }}</p>
+            </div>
+            <div class="col-sm col-md-6">
+                <h3>Feedback</h3>
+                <p>{{ learner_model.feedback }}</p>
+            </div>
+        </div>
+    </div>
 {% endblock %}
