--- a/templates/report.html
+++ b/templates/report.html
@@ -9,7 +9,7 @@
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
         <div class="container">
-            <h1 class="display-3">Report: {{ learner_model.full_name }}</h1>
+            <h1 class="display-3">Report: {{ user.username }}</h1>
         </div>
     </div>
 
