--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,6 @@
 
 <html lang="en">
-
+{% load static %}
 <head>
     <title>{% block title %}{% endblock %}</title>
 
@@ -18,9 +18,12 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
         integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
         crossorigin="anonymous"></script>
+    
+    <link rel="stylesheet" href="{% static 'base/base.css' %}">
+
 
     </head>
-<body>
+<body class="cikgu_background">
 
     <nav class="navbar navbar-expand-md navbar-dark bg-dark">
         <a class="navbar-brand" href="#">CikguHub</a>
