Report description is now generated

--- a/templates/report.html
+++ b/templates/report.html
@@ -17,7 +17,7 @@
             {% endfor %}
         </div>
         <div class="col-md-6">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec auctor lorem nec nisi blandit elementum. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Suspendisse sed velit velit. Sed auctor dolor vel ex dictum, ac rhoncus neque iaculis. Curabitur euismod suscipit turpis, ut bibendum enim suscipit at. Sed vel erat eu nunc pretium sagittis. Aliquam sit amet tellus faucibus, fermentum orci eget, bibendum metus. Mauris vel ante sem. Sed non mi est. Nam a justo eu mauris rhoncus bibendum ut nec justo. Sed dapibus euismod sapien ut iaculis.</p>
+            {{ description }}
         </div>
     </div>
 </div>
