Added update page for recs

--- a/templates/recs_expert.html
+++ b/templates/recs_expert.html
@@ -42,7 +42,7 @@
                         {% endfor %}
                     </div>
                     <div class="col-sm col-md-1">
-                        <a href="#" class="btn btn-primary">Edit</a>
+                        <a href="{% url 'main:update_module' m.id %}" class="btn btn-primary">Edit</a>
                     </div>
                 </div>
             </div>
