--- a/templates/base.html
+++ b/templates/base.html
@@ -59,6 +59,16 @@
                         <a class="dropdown-item" href="{% url 'report:expert_report' 0 %}">Expert</a>
                     </div>
                 </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="createMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Create
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="createMenu">
+                        <a class="dropdown-item" href="{% url 'main:create_video' %}">Create Video</a>
+                        <a class="dropdown-item" href="{% url 'main:create_video_question' %}">Create Video Question</a>
+                        <a class="dropdown-item" href="{% url 'main:create_module' %}">Create Module</a>
+                    </div>
+                </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'admin:index' %}">Admin</a>
                 </li>
