--- a/templates/report.html
+++ b/templates/report.html
@@ -18,7 +18,7 @@
             {% endfor %}
         </div>
         <div class="col-md-6">
-            {{ description }}
+            {{ description |safe }}
         </div>
     </div>
 </div>
