--- a/templates/base.html
+++ b/templates/base.html
@@ -48,6 +48,7 @@
                     <div class="dropdown-menu" aria-labelledby="recsysMenu">
                         <a class="dropdown-item" href="{% url 'recsys:user_recs' %}">User</a>
                         <a class="dropdown-item" href="{% url 'recsys:expert_recs' 0 %}">Expert</a>
+                        <a class="dropdown-item" href="{% url 'recsys:user_clustering' %}">User Clustering</a>
                     </div>
                 </li>
                 <li class="nav-item dropdown">
