Finished demo of user clustering page

--- a/templates/user_clustering.html
+++ b/templates/user_clustering.html
@@ -8,7 +8,7 @@
 <canvas id="myChart" style="width:100%;max-width:700px"></canvas>
 
 <script>
-var xyValues = [
+/*var xyValues = [
   {x:50, y:7},
   {x:60, y:8},
   {x:70, y:8},
@@ -20,7 +20,11 @@ var xyValues = [
   {x:130, y:14},
   {x:140, y:14},
   {x:150, y:15}
-];
+];*/
+
+var xyValues = {{plotpoints|safe}}
+
+console.log(xyValues);
 
 new Chart("myChart", {
   type: "scatter",
@@ -34,11 +38,15 @@ new Chart("myChart", {
   options: {
     legend: {display: false},
     scales: {
-      xAxes: [{ticks: {min: 40, max:160}}],
-      yAxes: [{ticks: {min: 6, max:16}}],
+      xAxes: [{ticks: {min: 0, max:11}}],
+      yAxes: [{ticks: {min: 0, max:5}}],
     }
   }
 });
 </script>
+
+{% for learner in learners %}
+<p> {{learner.full_name}} - {{learner.years_of_experience}} </p>
+{% endfor %}
 
 {% endblock %}
