--- a/templates/recs.html
+++ b/templates/recs.html
@@ -14,7 +14,100 @@
     </div>
     
     <div class="container">
-        {% if series %}
+
+        <div id="accordion">
+            {% if module %}
+            <div class="card">
+                <div class="card-header" id="headingOne">
+                    <h5 class="mb-0 pb-2">
+                        <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                            Series: {{ series.title }} - Track: {{ series.track.title }}
+                        </button>
+                    </h5>
+                    <div class="row justify-content-center align-items-center pb-2">
+                        <div class="col-sm col-md-3">
+                            <div class="embed-responsive embed-responsive-16by9">
+                                <iframe class="embed-responsive-item" src="{{ module.video.url }}" allowfullscreen></iframe>
+                            </div>
+                        </div>
+                        <div class="col-sm col-md-7">
+                            <p>Next Video: {{ module.video.title }}</p>
+                            {% for q in module.questions.all %}
+                            <li>{{ q.question }}</li>
+                            {% endfor %}
+                        </div>
+                        <div class="col-sm col-md-2">
+                            <a href="{% url 'recsys:recommended_module' module.id %}" class="btn btn-primary">Launch Module</a>
+                        </div>
+                    </div>
+                </div>
+            
+                <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
+                <div class="card-body">
+                    {% for v in series.video_set.all %}
+                        {% with m=v.module_set.all.first %}
+                        {% if m.id not in completed_modules %}
+                        <p>{{ forloop.counter }}. {{ m.title }}</p>
+                        {% else %}
+                        <p>{{ forloop.counter }}. [COMPLETED] {{ m.title }}</p>
+                        {% endif %}
+                        {% endwith %}
+                    {% endfor %}
+                </div>
+                </div>
+            </div>
+            {% else %}
+            <div class="card">
+                <div class="card-header">
+                    <h5 class="mb-0">
+                        No modules to work on, more coming soon!
+                    </h5>
+                </div>
+            </div>
+            {% endif %}
+            {% if module2 %}
+            <div class="card">
+                <div class="card-header" id="headingTwo">
+                    <h5 class="mb-0 pb-2">
+                        <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                            Series: {{ series2.title }} - Track: {{ series2.track.title }}
+                        </button>
+                    </h5>
+                    <div class="row justify-content-center align-items-center pb-2">
+                        <div class="col-sm col-md-3">
+                            <div class="embed-responsive embed-responsive-16by9">
+                                <iframe class="embed-responsive-item" src="{{ module2.video.url }}" allowfullscreen></iframe>
+                            </div>
+                        </div>
+                        <div class="col-sm col-md-7">
+                            <p>Next Video: {{ module2.video.title }}</p>
+                            {% for q in module2.questions.all %}
+                            <li>{{ q.question }}</li>
+                            {% endfor %}
+                        </div>
+                        <div class="col-sm col-md-2">
+                            <a href="{% url 'recsys:recommended_module' module2.id %}" class="btn btn-primary">Launch Module</a>
+                        </div>
+                    </div>
+                </div>
+                <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
+                    <div class="card-body">
+                        {% for v in series2.video_set.all %}
+                            {% with m=v.module_set.all.first %}
+                            {% if m.id not in completed_modules %}
+                            <p>{{ forloop.counter }}. {{ m.title }}</p>
+                            {% else %}
+                            <p>{{ forloop.counter }}. [COMPLETED] {{ m.title }}</p>
+                            {% endif %}
+                            {% endwith %}
+                        {% endfor %}
+                    </div>
+                </div>
+            </div>
+            {% endif %}
+        </div>
+
+        {% comment %} {% if series %}
             <h3>{{ series.title }} - Track: {{ series.track.title }}</h3>
 
             {% for v in series.video_set.all %}
@@ -41,6 +134,6 @@
             {% endfor %}
         {% else %}
         <p>No more activities left. More coming soon, thank you!</p>
-        {% endif %}
+        {% endif %} {% endcomment %}
     </div>
 {% endblock %}
