--- a/templates/user_clustering.html
+++ b/templates/user_clustering.html
@@ -3,9 +3,29 @@
 {% block title %} CikguHub - User Clustering {% endblock %}
 
 {% block content %}
+
+{% load recsys_extras %}
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
 
-<canvas id="myChart" style="width:100%;max-width:700px"></canvas>
+<div class="jumbotron">
+    <div class="container">
+        <h1 class="display-3">User Clustering</h1>
+    </div>
+</div>
+
+<div class="container">
+  {% for key,value in cluster_msgs.items %}
+  <p> {{ key }}: {{ value }}</p>
+  {% endfor %}
+
+  <br>
+  
+  {% for learner in learners %}
+  <p> {{learner.full_name}} - Experience: {{learner.years_of_experience}} - Cluster: {{ labels|index:forloop.counter0 }}</p>
+  {% endfor %}
+</div>
+
+<!-- <canvas id="myChart" style="width:100%;max-width:700px"></canvas> -->
 
 <script>
 /*var xyValues = [
@@ -20,7 +40,7 @@
   {x:130, y:14},
   {x:140, y:14},
   {x:150, y:15}
-];*/
+];
 
 var xyValues = {{plotpoints|safe}}
 
@@ -42,11 +62,7 @@ new Chart("myChart", {
       yAxes: [{ticks: {min: 0, max:5}}],
     }
   }
-});
+});*/
 </script>
-
-{% for learner in learners %}
-<p> {{learner.full_name}} - {{learner.years_of_experience}} </p>
-{% endfor %}
 
 {% endblock %}
