--- a/templates/report.html
+++ b/templates/report.html
@@ -18,6 +18,10 @@
             {% endfor %}
         </div>
         <div class="col-md-6">
+            {% for item in description %} 
+            {{item.answer}} 
+
+            {% endfor %}
             {{ description |safe }}
         </div>
     </div>
